ingress/noproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: noproxy-envoy
spec:
    replicas: 2
    template:
        spec:
            containers:
                - name: envoy
                  image: envoy
                  env:
                      - name: MY_NODE_NAME
                        valueFrom:
                            fieldRef:
                                fieldPath: spec.nodeName
                      - name: MY_POD_NAME
                        valueFrom:
                            fieldRef:
                                fieldPath: metadata.name
                  command:
                      - "envoy"
                  args:
                      - "-c"
                      - "/etc/envoy/envoy.yaml"
                      - "--service-node"
                      - "$(MY_POD_NAME)"
                      - "--service-zone"
                      - "$(MY_NODE_NAME)"
                      - "--service-cluster"
                      - "ingress:noproxy:https"
                  volumeMounts:
                      - name: envoy-config
                        mountPath: /etc/envoy
                      - name: jrock-us-certs
                        mountPath: /jrock.us
                  readinessProbe:
                      httpGet:
                          path: /ready
                          port: 9901
                  livenessProbe:
                      httpGet:
                          path: /ready
                          port: 9901
                  ports:
                      - name: envoy-admin
                        containerPort: 9901
                      - name: http
                        containerPort: 80
                      - name: https
                        containerPort: 443
                  resources:
                      requests:
                          memory: "100Mi"
                      limits:
                          memory: "100Mi"
            volumes:
                - name: envoy-config
                  configMap:
                      name: noproxy-envoy-config
                - name: jrock-us-certs
                  secret:
                      secretName: jrock-us-tls
