ingress/noproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: noproxy
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-protocol: "tcp"
        service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "false"
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 80
          targetPort: 80
        - name: https
          port: 443
          targetPort: 443
